--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -1,20 +1,20 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
-
+ 
   <view class='topone'>
     <view style='height:{{height4*2+20}}px' class='nav-wrap'>
       <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
     </view>
     <view style='height:{{height4*2+20}}px;' class='pad'></view>
-    <view hidden="{{inputShowed}}" bindtap="showInput" class='nav'>
+    <view wx:if="{{inputShowed==false}}"  bindtap="showInput" class='nav'>
       <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
       <view hover-class='none'>
-        <input class="search" placeholder="搜索关键字" placeholder-class="search-p"></input>
+        <input disabled="true" class="search" placeholder="搜索关键字" placeholder-class="search-p"></input>
       </view>
     </view>
-    <view hidden="{{!inputShowed}}" class='nav'>
+    <view wx:else class='nav'>
       <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
       <view hover-class='none'>
-        <input value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" class="search2" placeholder="大家都在搜" placeholder-class="search-p"></input>
+        <input value="{{inputVal}}" focus="{{inputShowed}}"  bindinput="inputTyping" class="search2" placeholder="搜索关键字" placeholder-class="search-p"></input>
       </view>
       <view wx:if="{{inputVal==''}}" class="cancel2" bindtap="hideInput">取消</view>
       <view wx:if="{{inputVal!=''}}" class="cancel" bindtap="hideInput">取消</view>
@@ -28,7 +28,7 @@
       </view>
     </scroll-view>
   </view>
-  <!-- <scroll-view   class='body' upper-threshold="250" scroll-y style="height:{{tphone.screenHeight}}px;padding-top:340rpx;" bindscrolltoupper="onPullDownRefresh" bindscrolltolower="onReachBottom" enable-back-to-top="true"> -->
+  <!-- <scroll-view bindscrolltoupper="onPullDownRefresh" upper-threshold="-1" scroll-y style="height:{{tphone.screenHeight}}px;" bindscroll="bindscroll" bindscrolltolower="onReachBottom" enable-back-to-top="true" scroll-top="{{scrolltop}}"> -->
   <view style='padding-top:340rpx;' class='body'>
     <view class='wait' wx:if="{{list.length==0}}">
       <image mode='widthFix' src='../../images/loading.svg'></image>
@@ -39,6 +39,7 @@
         <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
           <view bindtap='goDetail' data-id='{{item.id}}' class="item">
             <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+            <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:-80rpx;margin-left:275rpx;font-size:60rpx;color:#fff;'  class='iconfont icon-bofang'></view>
             <view class="item-title-box">
               <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
               <view wx:else class="item-title">{{item.content}}</view>
@@ -51,6 +52,7 @@
         <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
           <view bindtap='goDetail' data-id='{{item.id}}' class="item">
             <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+            <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:-80rpx;margin-left:275rpx;font-size:60rpx;color:#fff;'  class='iconfont icon-bofang'></view>
             <view class="item-title-box">
               <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
               <view wx:else class="item-title">{{item.content}}</view>
