--- a/pages/addNote/addNote.wxss
+++ b/pages/addNote/addNote.wxss
@@ -65,3 +65,15 @@ background-color:#f4f4f4;
 .placeholder{
   font-size: 28rpx;
 }
+.mask2{
+   display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right:0;
+    bottom:0;
+    left:0;
+    background: rgba(255,255,255,0.9);
+    z-index: 998;
+}
