--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -24,8 +24,8 @@ page{
 .index-profile__img {
   display: block;
   border-radius: 50%;
-  width: 200rpx;
-  height: 200rpx;
+  width: 100rpx;
+  height: 100rpx;
   margin: 0 auto;
   background-repeat: no-repeat;
   background-size: contain;
@@ -49,17 +49,18 @@ page{
   background-color: #fff;
 }
 .edit{
-width:400rpx;
+width:200rpx;
 height:50rpx;
 border:1rpx solid #ddd;
 border-radius:30rpx;
 text-align:center;
 font-size:30rpx;
-margin-top:25rpx;
+margin-top:40rpx;
 padding-top:10rpx;
 /* margin-left:15rpx; */
 background-color: #fff;
-
+position:absolute;
+left:500rpx;
 }
 .edit-text{
   margin-top: 15rpx;
@@ -147,5 +148,25 @@ width:710rpx;
   width: 60rpx;
   height: 60rpx;
   border-radius: 50%;
+}
+.register{
+  width: 100%;
 
+}
+.ruler{
+  position: absolute;
+  right: 30rpx;
+}
+.register-btn{
+  width: 300rpx;
+  background-color: #de3e29;
+  border-radius: 75rpx;
+  color: #fff;
+}
+.registered-btn{
+  width: 300rpx;
+  background-color: #f5f5f5;
+  border-radius: 75rpx;
+  color: #ddd;
+  margin-top: 20rpx;
 }
