--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -16,16 +16,16 @@
     </view>
   </view>
   <view style='height:{{height4*2+20}}px;' class='pad'></view>
-  <view hidden="{{inputShowed}}" bindtap="showInput" class='nav'>
+  <view wx:if="{{inputShowed==false}}" bindtap="showInput" class='nav'>
     <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
     <view hover-class='none'>
-      <input class="search" placeholder="搜索关键字" placeholder-class="search-p"></input>
+      <input disabled="true" value='{{inputVal}}' class="search" placeholder="搜索关键字" placeholder-class="search-p"></input>
     </view>
   </view>
-  <view hidden="{{!inputShowed}}" class='nav'>
+  <view wx:else class='nav'>
     <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
     <view hover-class='none'>
-      <input value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" class="search2" placeholder="大家都在搜" placeholder-class="search-p"></input>
+      <input value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" class="search2" placeholder="大家都在搜"  placeholder-class="search-p"></input>
     </view>
     <view class="cancel" bindtap="hideInput">取消</view>
     <view class="cancel" wx:if="{{inputVal!=''}}" bindtap="getList">搜索</view>
@@ -41,8 +41,8 @@
       <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
         <navigator url="../detail/detail?id={{item.id}}" class="item">
           <image class="item-img" src="{{item.img[0]}}" mode="widthFix">
-          <view wx:if="{{item.video!=null}}" style='z-index:4;'  class='iconfont icon-bofang'></view>
           </image>
+          <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:-80rpx;margin-left:275rpx;font-size:60rpx;color:#fff;'  class='iconfont icon-bofang'></view>
           <view class="item-title-box">
             <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
             <view wx:else class="item-title">{{item.content}}</view>
@@ -55,8 +55,8 @@
       <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
         <navigator url="../detail/detail?id={{item.id}}" class="item">
           <image class="item-img" src="{{item.img[0]}}" mode="widthFix">
-          <view wx:if="{{item.video!=null}}" style='z-index:4;'  class='iconfont icon-bofang'></view>
           </image>
+           <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:-80rpx;margin-left:275rpx;font-size:60rpx;color:#fff;'  class='iconfont icon-bofang'></view>
           <view class="item-title-box">
             <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
             <view wx:else class="item-title">{{item.content}}</view>
