--- a/app.wxss
+++ b/app.wxss
@@ -10,12 +10,12 @@
         "text": "写日记",
         "iconPath": "images/rizhi2.png",
         "selectedIconPath": "images/rizhi.png"
-      }, */
-       /* {
-        "pagePath": "pages/contact/contact",
-        "text": "咨询",
-        "iconPath": "images/liaotian2.png",
-        "selectedIconPath": "images/liaotian.png"
+      },
+      {
+        "pagePath": "pages/video/video",
+        "text": "发视频",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
       }, */
 .bold{
   font-weight: bold;
@@ -149,7 +149,10 @@ margin-top:70rpx;
   top: 0;
   background: #fff;
   color: #000;
-  z-index: 999;
+  z-index: 997;
+}
+.c62e{
+  color:#62e3d2;
 }
 .pl10{
   padding-left: 10rpx;
