--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -14,7 +14,7 @@
         <text>获得你的公开信息(昵称，头像等)</text>
     </view>
  
-    <button  class='bottom'  type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="userInfoHandler">
+    <button  class='bottom0'  type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="userInfoHandler">
         授权登录
     </button>
 </view>
