--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -61,10 +61,17 @@ margin-left:15rpx;
   background-color: #f5f5f5;
   top:230rpx;
 }
+.recom2{
+  position: fixed;
+  z-index: 4;
+  width: 100%;
+  background-color: #fff;
+ 
+}
 .recommend{
-width:100%;
+width:710rpx;
 height:90rpx;
-box-shadow: 1px 1px 25rpx #f5f5f5;
+/* box-shadow: 1px 1px 25rpx #f5f5f5; */
 margin-top:20rpx;
 background-color: #fff;
 overflow: hidden;
