--- a/pages/indexo/indexo.wxml
+++ b/pages/indexo/indexo.wxml
@@ -22,8 +22,8 @@
   </view>
   <view class='recom'>
     <view class='recom2'>
-    <scroll-view scroll-left="20rpx" scroll-x="true"  class='recommend'>
-      <view data-id='{{item.id}}' bindtap='change' class="f30 mt20 ml20 {{swiperIndex == index ? 'active' : ''}}" wx:for="{{titles}}" wx:key="{{item.id}}" data-idx='{{index}}' data-search="{{item.search}}" data-searchtwo="{{item.search2}}">
+    <scroll-view  scroll-x="true"  class='recommend'>
+      <view data-id='{{item.id}}' bindtap='change' class="f30 mt20 {{index == 0 ? '' : 'ml30'}} {{swiperIndex == index ? 'active' : ''}}" wx:for="{{titles}}" wx:key="{{item.id}}" data-idx='{{index}}' data-search="{{item.search}}" data-searchtwo="{{item.search2}}">
         {{item.name}}
       </view>
     </scroll-view>
