--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -69,9 +69,10 @@ margin-left:15rpx;
  
 }
 .recommend{
-width:710rpx;
+width:690rpx;
 height:90rpx;
 /* box-shadow: 1px 1px 25rpx #f5f5f5; */
+margin-left: 30rpx;
 margin-top:20rpx;
 background-color: #fff;
 overflow: hidden;
@@ -80,7 +81,6 @@ display: flex;
 }
 .recommend view{
   display: inline-block;
-  margin-left: 40rpx;
 }
 page{
   background-color: #f5f5f5;
@@ -89,7 +89,8 @@ page{
 }
 .active{
   font-weight: bold;
-  color: black
+  color: black;
+  font-size:32rpx;
 }
 .img2{
   width: 60rpx;
